# FlickeringLight

./: CMakeLists.txt  README.md  a.out  flickering-light  flickering-light.cpp
app/: CMakeLists.txt
app/include/flickering_light/: command_handler.h
app/src/: command_handler.cpp  main.cpp
